--- a/dti/src/main/resources/templates/application.yml
+++ b/dti/src/main/resources/templates/application.yml
@@ -4,6 +4,7 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+
 #    data: classpath:data.sql
 #    initialization-mode: always
   sql:
@@ -18,6 +19,9 @@ spring:
 #        show-sql: true
         format_sql: true
     defer-datasource-initialization: true
+  h2:
+    console:
+      enabled: false
 
 logging:
   level:
